# flowkit

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
output/: jira_custom_fields_DE.txt
src/atlassian/: __init__.py  confluence.py  jira.py
src/gutils/: drive.py  sheet.py
src/utils/: __init__.py  file_utils.py
tests/: __init__.py  test_file_utils.py  test_text_utils.py
